# WordleGameCPP

./: CMakeLists.txt  README.md
res/: words.txt
src/: main.cpp  wordle.cpp  worlde.h
